убрана анимация в блоге

--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
   <section class="news-section">
     <div class="container">
       <div class="row" >
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
             <h3>Почему масло должно быть неразбавленным</h3>
@@ -63,7 +63,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
             <h3>Про сертификат происхождения семян</h3>
@@ -72,7 +72,7 @@
 
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
             <h3>Первый холодный отжим</h3>
@@ -85,7 +85,7 @@
 
     <div class="container">
       <div class="row" >
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog4.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при инфекционных заболеваниях</h3>
@@ -93,7 +93,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog5.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях опорно-двигательной системы</h3>
@@ -103,7 +103,7 @@
 
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog6.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при онкологических заболеваниях</h3>
@@ -117,7 +117,7 @@
 
     <div class="container">
       <div class="row" >
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog7.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при кожных заболеваниях</h3>
@@ -127,7 +127,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog8.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях желез внутренних секреций</h3>
@@ -136,7 +136,7 @@
 
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog9.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях мочеполовой системы</h3>
@@ -150,7 +150,7 @@
 
     <div class="container">
       <div class="row" >
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog10.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при нарушении обмена веществ</h3>
@@ -159,7 +159,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog11.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при женских заболеваниях</h3>
@@ -170,7 +170,7 @@
 
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog12.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при мужских заболеваниях</h3>
@@ -184,7 +184,7 @@
 
     <div class="container">
       <div class="row" >
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog13.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях желудочно-кишечной системы</h3>
@@ -193,7 +193,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog14.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях дыхательной системы</h3>
@@ -203,7 +203,7 @@
 
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog15.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях сердечно-сосудистой системы </h3>
@@ -217,7 +217,7 @@
 
     <div class="container">
       <div class="row" >
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog16.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях нервной системы</h3>
@@ -226,7 +226,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+        <div class="col-sm-4 ">
           <div class="blog-item">
             <a href="#"><img src="images/blog17.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при ЛОР заболеваниях</h3>
