--- a/index.html
+++ b/index.html
@@ -82,40 +82,40 @@
   <section class="new-section">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.2s">
+        <div class="col-md-3">
           <div class="product-item">
             <img src="images/1.png" class="img-responsive" width="255" height="322" alt="">
             <div class="product-title">
               <h3>Масло черного тмина 100 мл.</h3>
-              <span>5р</span>
+              <!-- <span></span> -->
             </div>
           </div>
         </div>
 
-        <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.4s">
+        <div class="col-md-3">
           <div class="product-item">
             <img src="images/2.png" class="img-responsive" width="255" height="322" alt="">
             <div class="product-title">
               <h3>Масло черного тмина 250 мл.</h3>
-              <span>10р</span>
+              <!-- <span></span> -->
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.6s">
+        <div class="col-md-3">
           <div class="product-item">
             <img src="images/3.png" class="img-responsive" width="255" height="322" alt="">
             <div class="product-title">
               <h3>Масло черного тмина 500 мл.</h3>
-              <span>20р</span>
+              <!-- <span></span> -->
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-sm-6 wow fadeInLeft animated" data-wow-delay="0.8s">
+        <div class="col-md-3">
           <div class="product-item">
             <img src="images/4.png" class="img-responsive" width="255" height="322" alt="">
             <div class="product-title">
               <h3>Семена черного тмина 100 гр.</h3>
-              <span>2р</span>
+              <!-- <span></span> -->
             </div>
           </div>
         </div>
@@ -264,7 +264,7 @@
         </div>
       </div>
       <div class="row" >
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.2s">
+        <div class="col-sm-4">
           <div class="blog-item">
             <a href="#"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
             <h3>Почему масло должно быть неразбавленным</h3>
@@ -272,7 +272,7 @@
             <a href="#">Читать дальше</a>
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.4s">
+        <div class="col-sm-4">
           <div class="blog-item">
             <a href="#"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
             <h3>Про сертификат происхождения семян</h3>
@@ -281,7 +281,7 @@
 
           </div>
         </div>
-        <div class="col-sm-4 wow fadeInDown animated" data-wow-delay="0.6s">
+        <div class="col-sm-4">
           <div class="blog-item">
             <a href="#"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
             <h3>Первый холодный отжим</h3>
