--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="carousel-caption">
             <h2>Масло <b>&</b> семена тмина</h2>
             <h3>с доставкой по <Span>Беларуси</Span></h3>
-            <a href="#">Купить</a>
+            <a href="contact.html">Купить</a>
           </div>
         </div>
       </div>
