добавление 6 статей в блог

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Полезнае статьи про черный тмин</title>
+  <title>Полезные статьи о чёрном тмине</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
@@ -57,27 +57,27 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="#"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog1.html"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
             <h3>Почему масло должно быть неразбавленным</h3>
             <p>Масло черного тмина полезно в своем первозданном, неразбавленном виде — именно на неразбавленное масло рассчитаны все рецепты по его употреблению. Дело в том, что, к сожалению, многие производители в целях экономии стали разбавлять свою продукцию другими растительными маслами, а это приводит к следующим последствиям:</p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog1.html">Читать дальше</a>
           </div>
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="#"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog2.html"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
             <h3>Про сертификат происхождения семян</h3>
             <p>Существуют разные сорта тмина. Насыщенность семян черного тмина полезными микроэлементами во многом зависит от места его произрастания. Наиболее удачное сочетание климатических условий для выращивания семян тмина, обладающих медицинскими свойствами, это:</p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog2.html">Читать дальше</a>
 
           </div>
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="#"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog3.html"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
             <h3>Первый холодный отжим</h3>
             <p>В случае с черным тмином очень важно, чтобы масло было получено именно путем первого холодного отжима — только так можно максимально сохранить его полезные свойства. Дело в том, что при горячем отжиме прессованию предшествует этап обработки семян в жаровнях — измельченные семена с добавлением воды обжаривают при температуре 100-110⁰С, после чего уже отжимают. </p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog3.html">Читать дальше</a>
           </div>
         </div>
       </div><br><br>
@@ -87,29 +87,29 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="#"><img src="images/blog4.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog4.html"><img src="images/blog4.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при инфекционных заболеваниях</h3>
             <p>Очищенные от кожицы 1-2 дольки чеснока натереть нa мелкой терке, смешать с 1 чайной ложкой черного тмина и с </p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog4.html">Читать дальше</a>
           </div>
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="#"><img src="images/blog5.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog5.html"><img src="images/blog5.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при заболеваниях опорно-двигательной системы</h3>
             <p>Ревматизм и мышечные боли -
               Немного нагреть небольшое количество черного тмина, смешанного с оливковым маслом, и интенсивно растереть больное место. Перед сном </p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog5.html">Читать дальше</a>
 
           </div>
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="#"><img src="images/blog6.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog6.html"><img src="images/blog6.jpg" width="350" height="262" alt=""></a>
             <h3>Применение черного тмина при онкологических заболеваниях</h3>
             <p>Рак.
               Рекомендуется при раке употреблять черный тмин с чесноком. Для профилактики</p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog6.html">Читать дальше</a>
           </div>
         </div>
       </div><br><br>
