--- a/index.html
+++ b/index.html
@@ -20,21 +20,6 @@
     </div>
   </div>
 
-  <!-- <section class="header-top-section">
-    <div class="container">
-      <div class="row">
-        <div  class="col-md-6">
-          <div class="header-top-content">
-            <ul class="nav nav-pills navbar-left">
-              <li><a href="#"><i class="pe-7s-call"></i><span> 8 029 310 87 89</span></a></li>
-              <li><a href="#"><i class="pe-7s-call"></i><span> Заказать звонок</span></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <header class="header-section">
     <nav class="navbar navbar-default">
       <div class="container">
@@ -266,30 +251,38 @@
       <div class="row" >
         <div class="col-sm-4">
           <div class="blog-item">
-            <a href="#"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog1.html"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
             <h3>Почему масло должно быть неразбавленным</h3>
             <p>Масло черного тмина полезно в своем первозданном, неразбавленном виде — именно на неразбавленное масло рассчитаны все рецепты по его употреблению. Дело в том, что, к сожалению, многие производители в целях экономии стали разбавлять свою продукцию другими растительными маслами, а это приводит к следующим последствиям:</p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog1.html">Читать далее</a>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="blog-item">
-            <a href="#"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog2.html"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
             <h3>Про сертификат происхождения семян</h3>
             <p>Существуют разные сорта тмина. Насыщенность семян черного тмина полезными микроэлементами во многом зависит от места его произрастания. Наиболее удачное сочетание климатических условий для выращивания семян тмина, обладающих медицинскими свойствами, это:</p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog2.html">Читать далее</a>
 
           </div>
         </div>
         <div class="col-sm-4">
           <div class="blog-item">
-            <a href="#"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog3.html"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
             <h3>Первый холодный отжим</h3>
             <p>В случае с черным тмином очень важно, чтобы масло было получено именно путем первого холодного отжима — только так можно максимально сохранить его полезные свойства. Дело в том, что при горячем отжиме прессованию предшествует этап обработки семян в жаровнях — измельченные семена с добавлением воды обжаривают при температуре 100-110⁰С, после чего уже отжимают. </p>
-            <a href="#">Читать дальше</a>
+            <a href="blog/blog3.html">Читать далее</a>
           </div>
         </div>
       </div>
+
+      <div class="blog-item">
+        <div  class="align-center">
+          <br><br><br>
+          <a href="blog.html">Читать все статьи</a>
+        </div>
+      </div>
+
     </div>
   </section>
 
