--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 wow fadeInLeft animated">
+        <div class="col-md-6">
           <div class="left-content">
             <h1><span>Cu</span>min</h1>
             <h3>Мы будем рады встретиться с вами лично или через Интернет!</h3>
@@ -312,7 +312,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 wow fadeInRight animated">
+        <div class="col-md-6">
           <form action="send.php" method="post" class="contact-form">
             <div class="row">
               <div class="col-md-6">
