убрана анимация на странице контактов

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 wow fadeInLeft animated">
+        <div class="col-md-6">
           <div class="left-content">
             <h1><span>Cu</span>min</h1>
             <h3>Мы будем рады встретиться с вами лично или через Интернет!</h3>
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 wow fadeInRight animated">
+        <div class="col-md-6">
           <form action="send.php" method="post" class="contact-form">
             <div class="row">
               <div class="col-md-6">
