--- a/index.html
+++ b/index.html
@@ -204,18 +204,31 @@
       <div class="col-sm-12">
         <div >
           <div>
-            <h2>Светлана</h2>
-            <span></span>
-
-            <h3>Здравствуйте. Я пожилая женщина. Мне 60 лет. Страдала множеством болезней: Сахарный диабет, нарушение ЖКТ (мучали запоры), и по женской части были проблемы. По совету дочери начала пить масло Доктор Тмин. После 4 месяцев употребления нормализовался до положенного сахар; также стала ходить в туалет (раньше неделями не могла). Нормализовалось общее состояние организма. И перестали выходить выделения по женской части. До этого вообще не знала о существовании такого масла. Теперь только его и употребляю. Спасибо компании Макеми за такой не дорогой и очень качественный продукт. Теперь его рекомендую всем своим родственникам.</h3>
+            <div class="row" >
+              <div class="col-sm-4 ">
+                <div class="blog-item">
+                  <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239040&hash=c9085059adbcba88" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
+              <div class="col-sm-4 ">
+                <div class="blog-item">
+                  <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239037&hash=06fbb3ea98517460" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
+              <div class="col-sm-4 ">
+                <div class="blog-item">
+                  <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239030&hash=ad4c24c9e8222f26" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div><br><br>
           </div>
         </div>
         <div>
           <div>
-            <h2>Александр</h2>
+            <h2>Светлана</h2>
             <span></span>
 
-            <h3>Ассаляму Алейкум. Приобрел масло Доктор Тмин у представителя в Казахстане. Масло реально на высшем уровне. Чистое без примесей. На рынке Казахстана такого еще не было. Чувствую прилив сил. Также даю детям. При заболевании детей 2-3 чайные ложки и нет ни температуры ни кашля ни насморка. Держите свое производство на таком же уровне. Пусть Аллах облегчит вам ваше полезное дело.</h3>
+            <h3>Здравствуйте. Я пожилая женщина. Мне 60 лет. Страдала множеством болезней: Сахарный диабет, нарушение ЖКТ (мучали запоры), и по женской части были проблемы. По совету дочери начала пить масло Доктор Тмин. После 4 месяцев употребления нормализовался до положенного сахар; также стала ходить в туалет (раньше неделями не могла). Нормализовалось общее состояние организма. И перестали выходить выделения по женской части. До этого вообще не знала о существовании такого масла. Теперь только его и употребляю. Спасибо компании Макеми за такой не дорогой и очень качественный продукт. Теперь его рекомендую всем своим родственникам.</h3>
           </div>
         </div>
         <div>
@@ -229,15 +242,13 @@
       </div>
     </div>
 
-        <div class="blog-item">
-          <div  class="align-center">
-            <a href="review.html">Читать все отзывы</a>
-          </div>
-        </div>
-
-
-
+    <div class="blog-item">
+      <div  class="align-center">
+        <a href="review.html">Все отзывы</a>
+      </div>
+    </div>
   </section>
+
 
   <section class="news-section">
     <div class="container">
@@ -276,15 +287,68 @@
         </div>
       </div>
 
-      <div class="blog-item">
+      <!-- <div class="blog-item">
         <div  class="align-center">
           <br><br><br>
-          <a href="blog.html">Читать все статьи</a>
+          <a href="blog.html">Все статьи</a>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </section>
+
+  <section class="service-section">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="titie-section wow fadeInDown animated ">
+            <h1>Доставка и схема работы</h1>
+            <br><br><br>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12 col-sm-12 ">
+          <div class="service-item">
+            <img src="images/sh-1.png" width="100" height="100" alt="">
+            <h3>Заказ товара на сайте</h3>
+          </div>
+        </div>
+
+        <div class="col-md-12 col-sm-12> ">
+          <div class="service-item">
+            <img src="images/sh-2.png" width="100" height="100" alt="">
+            <h3>Подтверждение заказа</h3>
+          </div>
+        </div>
+
+        <div class="col-md-12 col-sm-12 ">
+          <div class="service-item">
+            <img src="images/sh-3.png" width="100" height="100" alt="">
+            <h3>Выбор способа доставки</h3>
+          </div>
+        </div>
+
+        <div class="col-md-12 col-sm-12 ">
+          <div class="service-item">
+            <img src="images/sh-5.png" width="100" height="100" alt="">
+            <h3>Отправка заказа со склада</h3>
+          </div>
+        </div>
+
+        <div class="col-md-12 col-sm-12 ">
+          <div class="service-item">
+            <img src="images/m6.png" width="100" height="100" alt="">
+            <h3>Получение заказа и оплата</h3>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
 
   <section class="contact-section">
     <div class="container">
