--- a/review.html
+++ b/review.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  
+
 
   <header class="header-section">
     <nav class="navbar navbar-default">
@@ -55,6 +55,47 @@
   </header>
 
   <section class="news-section">
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-sm-4 ">
+          <div class="blog-item">
+            <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239040&hash=c9085059adbcba88" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-sm-4 ">
+          <div class="blog-item">
+            <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239037&hash=06fbb3ea98517460" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-sm-4 ">
+          <div class="blog-item">
+            <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239030&hash=ad4c24c9e8222f26" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div><br><br>
+    </div><br><br>
+
+    <div class="container">
+      <div class="row" >
+        <div class="col-sm-4 ">
+          <div class="blog-item">
+            <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239038&hash=73f0fb1502c5b1c1" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-sm-4 ">
+          <div class="blog-item">
+            <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239035&hash=d71630301f7392c4" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-sm-4 ">
+          <div class="blog-item">
+            <iframe src="https://vk.com/video_ext.php?oid=-154566796&id=456239039&hash=0a3a2e77aa191a42" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div><br><br>
+    </div><br><br>
+
     <div class="container">
       <div class="col-sm-12">
         <div >
