--- a/index.html
+++ b/index.html
@@ -69,38 +69,38 @@
       <div class="row">
         <div class="col-md-3">
           <div class="product-item">
-            <img src="images/1.png" class="img-responsive" width="255" height="322" alt="">
+            <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt=""></a>
             <div class="product-title">
-              <h3>Масло черного тмина 100 мл.</h3>
-              <!-- <span></span> -->
+              <a href="product/100ml.html"><h3>Масло черного тмина 100 мл.</h3></a>
+              <a href="product/100ml.html"><span>19р</span></a>
             </div>
           </div>
         </div>
 
         <div class="col-md-3">
           <div class="product-item">
-            <img src="images/2.png" class="img-responsive" width="255" height="322" alt="">
+            <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt=""></a>
             <div class="product-title">
-              <h3>Масло черного тмина 250 мл.</h3>
-              <!-- <span></span> -->
+              <a href="product-title"><h3>Масло черного тмина 250 мл.</h3></a>
+              <a href="product-title"><span>46р</span></a>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="product-item">
-            <img src="images/3.png" class="img-responsive" width="255" height="322" alt="">
+            <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt=""></a>
             <div class="product-title">
-              <h3>Масло черного тмина 500 мл.</h3>
-              <!-- <span></span> -->
+              <a href="product/500ml.html"><h3>Масло черного тмина 500 мл.</h3></a>
+              <a href="product/500ml.html"><span>86р</span></a>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="product-item">
-            <img src="images/4.png" class="img-responsive" width="255" height="322" alt="">
+            <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt=""></a>
             <div class="product-title">
-              <h3>Семена черного тмина 100 гр.</h3>
-              <!-- <span></span> -->
+              <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
+              <a href="product/100g.html"><span>5р</span></a>
             </div>
           </div>
         </div>
