добавлено описание товаров на главной

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
               <a href="product/100ml.html"><span>19р</span></a>
             </div>
           </div>
+          <div>
+            <h3>Масло черного тмина «Доктор Тмин» 100 мл. — отличное решение для знакомства с продуктом! Если вы давно хотели попробовать масло черного тмина от Makemi и ощутить его действие на себе — то вам идеально подойдет этот вариант. 100 мл масла хватит на прохождение полноценного месячного курса, в процессе которого вы уже сможете ощутить положительные изменения в организме и оценить его качество.</h3>
+          </div>
         </div>
 
         <div class="col-md-3">
@@ -85,6 +88,9 @@
               <a href="product-title"><span>46р</span></a>
             </div>
           </div>
+          <div>
+            <h3>Масло черного тмина «Доктор Тмин» 250 мл. — выгодное решение для небольшой семьи из трех человек! За месячный курс вы всей семьей сможете познакомиться с продуктом, оценить его качество и почувствовать положительные влияние. Большая удобная бутылка из специального темного стекла поможет сохранить полезные свойства масла на протяжении всего курса и будет служить постоянным напоминанием о том, что масло нужно пить регулярно.</h3>
+          </div>
         </div>
         <div class="col-md-3">
           <div class="product-item">
@@ -94,6 +100,10 @@
               <a href="product/500ml.html"><span>86р</span></a>
             </div>
           </div>
+          <div>
+            <h3>Масло черного тмина «Доктор тмин» 500 мл. — наиболее удобное решение для большой семьи! Если у вас несколько детей и вы всей семьей регулярно пьете масло черного тмина, то выгоднее всего брать 500 мл. Солидная большая бутылка масла «Доктор тмин», стоящая на столе не только сэкономит вам деньги, но и будет служить ежедневным напоминанием о приеме масла. Также бутылка масла «Доктор тмин» 500 мл. — отличный вариант для подарка при походе в гости к семье друзей! Красивый внешний вид бутылки и полезные свойства самого продукта лучше всяких слов скажут о ваших искренних пожеланиях добра и здоровья любимым людям.</h3>
+
+          </div>
         </div>
         <div class="col-md-3">
           <div class="product-item">
@@ -102,6 +112,9 @@
               <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
               <a href="product/100g.html"><span>5р</span></a>
             </div>
+          </div>
+          <div>
+            <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
           </div>
         </div>
       </div>
