кнопки подробнее на товарах

--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
   <section class="new-section">
     <div class="container">
       <div class="row">
+
+        <div class="col-md-3">
+          <div class="product-item">
+            <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt=""></a>
+            <div class="product-title">
+              <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
+              <a href="product/100g.html"><span>5р</span></a>
+            </div>
+          </div>
+          <div>
+            <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/100g.html">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-md-3">
           <div class="product-item">
             <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt=""></a>
@@ -77,6 +96,11 @@
           </div>
           <div>
             <h3>Масло черного тмина «Доктор Тмин» 100 мл. — отличное решение для знакомства с продуктом! Если вы давно хотели попробовать масло черного тмина от Makemi и ощутить его действие на себе — то вам идеально подойдет этот вариант. 100 мл масла хватит на прохождение полноценного месячного курса, в процессе которого вы уже сможете ощутить положительные изменения в организме и оценить его качество.</h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/100ml.html">Подробнее</a>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -90,8 +114,14 @@
           </div>
           <div>
             <h3>Масло черного тмина «Доктор Тмин» 250 мл. — выгодное решение для небольшой семьи из трех человек! За месячный курс вы всей семьей сможете познакомиться с продуктом, оценить его качество и почувствовать положительные влияние. Большая удобная бутылка из специального темного стекла поможет сохранить полезные свойства масла на протяжении всего курса и будет служить постоянным напоминанием о том, что масло нужно пить регулярно.</h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/250ml.html">Подробнее</a>
+              </div>
+            </div>
           </div>
         </div>
+
         <div class="col-md-3">
           <div class="product-item">
             <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt=""></a>
@@ -102,35 +132,19 @@
           </div>
           <div>
             <h3>Масло черного тмина «Доктор тмин» 500 мл. — наиболее удобное решение для большой семьи! Если у вас несколько детей и вы всей семьей регулярно пьете масло черного тмина, то выгоднее всего брать 500 мл. Солидная большая бутылка масла «Доктор тмин», стоящая на столе не только сэкономит вам деньги, но и будет служить ежедневным напоминанием о приеме масла. Также бутылка масла «Доктор тмин» 500 мл. — отличный вариант для подарка при походе в гости к семье друзей! Красивый внешний вид бутылки и полезные свойства самого продукта лучше всяких слов скажут о ваших искренних пожеланиях добра и здоровья любимым людям.</h3>
-
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="product-item">
-            <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt=""></a>
-            <div class="product-title">
-              <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
-              <a href="product/100g.html"><span>5р</span></a>
+            <div class="blog-item">
+              <div>
+                <a href="product/500ml.html">Подробнее</a>
+              </div>
             </div>
           </div>
-          <div>
-            <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
-          </div>
         </div>
+
       </div>
     </div>
   </section>
 
-  <section class="offer-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 wow fadeInDown animated ">
-          <h1>+375 29 310 87 89</h1>
-          <h2>Позвоните и наши специалисты проконсультируют вас по вопросам покупки и употребления масла черного тмина!</h2>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   <section class="service-section">
     <div class="container">
@@ -299,15 +313,18 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="blog-item">
-        <div  class="align-center">
-          <br><br><br>
-          <a href="blog.html">Все статьи</a>
-        </div>
-      </div> -->
-
     </div>
+  </section>
+
+  <section class="offer-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 wow fadeInDown animated ">
+          <h1>+375 29 310 87 89</h1>
+          <h2>Позвоните и наши специалисты проконсультируют вас по вопросам покупки и употребления масла черного тмина!</h2>
+        </div>
+      </div>
+    </div><br><br>
   </section>
 
   <section class="service-section">
@@ -357,10 +374,11 @@
             <h3>Получение заказа и оплата</h3>
           </div>
         </div>
-
       </div>
     </div>
   </section>
+
+
 
 
   <section class="contact-section">
