кнопка все отзывы

--- a/index.html
+++ b/index.html
@@ -266,14 +266,15 @@
             <h3>Работаю воспитателем в детском саду более 30 лет. Все прекрасно знают, что значит работать с детьми дошкольного возраста. В следствие этого постоянные головные боли, нервный срыв, ухудшение пищеварительного процесса, плохой аппетит, высокое давление и много других болезней. Пользуюсь маслом черного тмина «Доктор Тмин» (раньше продавалось под названием Шифа) в течение 5 лет, дарованное Самим Всевышним, я чувствую себя на много лучше. Как, только начинает беспокоить что-то, сразу начинаю принимать масло черного тмина «Доктор Тмин». С уважением Валиева Изидья. <br><br> </h3>
           </div>
         </div>
+        <div class="blog-item">
+          <div>
+            <a href="review.html">Все отзывы</a>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="blog-item">
-      <div  class="align-center">
-        <a href="review.html">Все отзывы</a>
-      </div>
-    </div>
+
   </section>
 
 
